feature: Added swagger API documentation
