# src/routes/blogsRoutes.ts
@@ -8,8 +8,10 @@ const router: Router = express.Router();
 router.post('/create', middleware, VerifyAccess, blogController.createBlog);
 router.get('/:id', blogController.getBlog);
 router.get('/get', blogController.getAllBlogs);
-router.delete('/:id', VerifyAccess, blogController.deleteBlog);
-router.delete('/delete', VerifyAccess, blogController.deleteAllBlogs);
-router.patch('/:id', VerifyAccess, blogController.updateBlog);
+router.delete('/:id', VerifyAccess("admin"), blogController.deleteBlog);
+router.delete('/delete', VerifyAccess("admin"), blogController.deleteAllBlogs);
+router.patch('/:id', VerifyAccess("admin"), blogController.updateBlog);
+router.post("/like/:id",blogController.likeBlog)
+router.post("/unlike/:id",blogController.dislikeBlog)
 
 export default router;
